part2/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datehash-dep
  namespace: pingpongdatehash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datehash
  template:
    metadata:
      labels:
        app: datehash
    spec:
      volumes:
        - name: datelog
          persistentVolumeClaim:
            claimName: pingpongdate-claim
      containers:
        - name: date
          image: penao7/date
          volumeMounts:
          - name: datelog
            mountPath: /usr/app/
        - name: hash
          image: penao7/hash
          volumeMounts:
          - name: datelog
            mountPath: /usr/app/
