part2/manifests/internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
