part2/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datehash-svc
spec:
  type: ClusterIP
  selector:
    app: datehash 
  ports:
    - port: 2345
      name: hashport
      protocol: TCP
      targetPort: 3000
